--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -21,7 +21,7 @@
   <description>Plugin for Scala language support</description>
   <version>VERSION</version>
   <vendor logo="/org/jetbrains/plugins/scala/images/scala-small-logo.png" url="http://www.jetbrains.com">JetBrains Inc.</vendor>
-  <idea-version since-build="107.277"/>
+  <idea-version since-build="107.277" until-build="107.999"/>
   <depends optional="true" config-file="scala-maven-integration.xml">org.jetbrains.idea.maven</depends>
   <depends optional="true" config-file="intellilang-scala-support.xml">org.intellij.intelliLang</depends>
   <depends optional="true" config-file="copyright.xml">com.intellij.copyright</depends>
