Format string and argument list inspection (format, formatted, printf)

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -649,6 +649,11 @@
                      displayName="Missing type annotation"
                      groupName="Scala: General" shortName="DangerousCatchAll"
                      level="WARNING" enabledByDefault="true" language="Scala"/>
+    <localInspection implementationClass="org.jetbrains.plugins.scala.codeInspection.format.MalformedFormatStringInspection"
+                     displayName="Malformed format string" groupName="Scala: General"
+                     shortName="MalformedFormatString" level="WARNING"
+                     enabledByDefault="true" language="Scala"/>
+
     <!--<localInspection implementationClass="org.jetbrains.plugins.scala.codeInspection.allErrorsInspection.AnnotatorBasedErrorInspection"
                      displayName="All Errors Tool" groupName="Scala: General"
                      shortName="ScalaAllErrors" level="WARNING"
