Improvements for interpolated strings; highlighting/bm for xml comments; SCL-4385; SCL-4350; SCL-4348; SCL-4295; SCL-4223; SCL-4188; SCL-4126; some improvements for play 2 plugin; tests (cherry picked from commit c9de149)

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -34,6 +34,10 @@
   <extensions xmlns="org.jetbrains.idea.maven">
    <importer implementation="org.jetbrains.plugins.scala.config.ScalaMavenImporter"/>
   </extensions>
+  
+  <extensionPoints>
+    <extensionPoint name="scalaParserPatcher" interface="org.jetbrains.plugins.scala.lang.parser.util.ParserPatcher"/>
+  </extensionPoints>
 
   <extensions defaultExtensionNs="com.intellij">
     <statementUpDownMover implementation="org.jetbrains.plugins.scala.lang.refactoring.ScalaStatementMover"/>
