--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -488,9 +488,33 @@
 
     <intentionAction>
       <category>Scala/Format</category>
-      <className>org.jetbrains.plugins.scala.codeInsight.intention.format.ConvertFormatCallToInterpolatedString</className>
+      <className>org.jetbrains.plugins.scala.codeInsight.intention.format.ConvertFormattedStringToStringConcatenation</className>
     </intentionAction>
 
+    <intentionAction>
+      <category>Scala/Format</category>
+      <className>org.jetbrains.plugins.scala.codeInsight.intention.format.ConvertFormattedStringToInterpolatedString</className>
+    </intentionAction>
+
+    <intentionAction>
+      <category>Scala/Format</category>
+      <className>org.jetbrains.plugins.scala.codeInsight.intention.format.ConvertInterpolatedStringToStringConcatenation</className>
+    </intentionAction>
+
+    <intentionAction>
+      <category>Scala/Format</category>
+      <className>org.jetbrains.plugins.scala.codeInsight.intention.format.ConvertInterpolatedStringToFormattedString</className>
+    </intentionAction>
+
+    <intentionAction>
+      <category>Scala/Format</category>
+      <className>org.jetbrains.plugins.scala.codeInsight.intention.format.ConvertStringConcatenationToFormattedString</className>
+    </intentionAction>
+
+    <intentionAction>
+      <category>Scala/Format</category>
+      <className>org.jetbrains.plugins.scala.codeInsight.intention.format.ConvertStringConcatenationToInterpolatedString</className>
+    </intentionAction>
 
     <lang.elementManipulator forClass="org.jetbrains.plugins.scala.lang.psi.api.base.ScLiteral"
                              implementationClass="org.jetbrains.plugins.scala.injection.ScalaStringLiteralManipulator"/>
