SCL-4516 Run selected code in Scala Console.

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -776,6 +776,15 @@
       <add-to-group group-id="RunContextPopupGroup" anchor="last"/>
       <keyboard-shortcut first-keystroke="control shift D" keymap="$default"/>
     </action>
+    <action id="Scala.SendSelectionToConsole" class="org.jetbrains.plugins.scala.console.SendSelectionToConsoleAction"
+            text="Send Selection To Scala Console" description="Send selection to Scala console">
+        <add-to-group group-id="RunContextPopupGroup" anchor="last"/>
+        <keyboard-shortcut first-keystroke="control shift X" keymap="$default"/>
+        <keyboard-shortcut keymap="Mac OS X" first-keystroke="ctrl shift X"/>
+        <keyboard-shortcut keymap="Mac OS X" first-keystroke="meta shift X" remove="true"/>
+        <keyboard-shortcut keymap="Mac OS X 10.5+" first-keystroke="ctrl shift X"/>
+        <keyboard-shortcut keymap="Mac OS X 10.5+" first-keystroke="meta shift X" remove="true"/>
+    </action>
     <action id="Scala.EnableErrors" class="org.jetbrains.plugins.scala.actions.ToggleTypeAwareHighlightingAction">
       <keyboard-shortcut first-keystroke="alt control shift E" keymap="$default"/>
     </action>
