Fixed SCL-4550. 'val' keyword in for statements was deprecated. (cherry-picked from 45683d9)

--- a/src/org/jetbrains/plugins/scala/ScalaBundle.properties
+++ b/src/org/jetbrains/plugins/scala/ScalaBundle.properties
@@ -497,3 +497,5 @@ multi.line.string.margin.char.indent=Margin char indent:
 multi.line.string.opening.quotes.on.new.line=Opening quotes on new line
 multi.line.string.keep.opening.quotes=Keep opening quotes
 multi.line.string.process.margin.on.copy.paste=Strip/Insert margin on copy/paste
+enumerator.val.keyword.deprecated='val' keyword in enumerators is deprecated
+generator.val.keyword.removed=Expected pattern, but 'val' was found
