scala.properties: point to the Nika SDK

--- a/scala.properties
+++ b/scala.properties
@@ -1,8 +1,2 @@
 scala.plugin.version=0.3
-
-#idea.home=/Applications/IntelliJ IDEA 9.0 Beta.app/
-#scala.lib=/Users/ilya/work/scala-lang/dists/latest/lib
-
-idea.home=d:/tools/idea
-#jdk.home=d:/tools/jdk
-#scala.lib=d:/tools/scala/lib
+idea.home=./SDK/LedaSDK
