SCL-4693 Added "Show code folding outline for all multi-line blocks" checkbox. (cherry-picked from 5099a10)

--- a/src/org/jetbrains/plugins/scala/editor/EditorBundle.properties
+++ b/src/org/jetbrains/plugins/scala/editor/EditorBundle.properties
@@ -4,6 +4,7 @@ checkbox.collapse.method.call.bodies=Method call bodies (Scala)
 checkbox.collapse.template.bodies=Template bodies (Scala)
 checkbox.collapse.type.lambdas=Type Lambdas (Scala)
 checkbox.collapse.packagings=Packagings (Scala)
-checkbox.collapse.multiline.strings=Multiline strings (Scala)
+checkbox.collapse.multiline.strings=Multi-line strings (Scala)
 checkbox.collapse.custom.regions=Custom regions (Scala)
-checkbox.collapse.multiline.blocks=Multiline blocks (Scala)
+checkbox.collapse.multiline.blocks=Multi-line blocks (Scala)
+checkbox.add.folding.for.all.blocks=Show code folding outline for all multi-line blocks (Scala)
